# python_handbook

./: .gitignore  pyproject.toml  requirements.txt  requirements2.txt
ai/: audio_classification_hf.ipynb  auto_speech_recognition.ipynb  hugging_face.ipynb  openai_api.ipynb  prompt_engineering.ipynb  structuring_end_to_end_apps.ipynb
data/: college_data_sample.csv
ml/: boxcox_transformations.ipynb  clustering.ipynb  dim_reduction.ipynb  ensemble_methods.ipynb  feature_selection_regression.ipynb  handling_missing_vals.ipynb  regularization.ipynb
python/: apply_df.ipynb  exercice.py  generators.ipynb  groupby_df.ipynb  iterables.py  lambda_expressions.ipynb  list_comprenhension.ipynb  map_filter_reduce.ipynb  numpy_arrays.ipynb  recursion.ipynb  regex_tutorial.py  types_of_args.ipynb  zip_objects.ipynb
python_poo/: poo_intro.ipynb
