[project]
name = "denue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.1",
    "groq>=0.18.0",
    "huggingface-hub>=0.28.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "openai>=1.62.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "statsmodels>=0.14.4",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "vecstack>=0.4.0",
    "xgboost>=2.1.4",
    "yellowbrick>=1.5",
]
